--- a/css/styles.css
+++ b/css/styles.css
@@ -110,6 +110,8 @@ p {
 
 .title {
   background: #2e2f42;
+  padding-top: 188px;
+  padding-bottom: 188px;
 }
 
 .title-text {
@@ -118,14 +120,9 @@ p {
   line-height: 1.07;
   letter-spacing: 0.02em;
   color: #fff;
-  padding-top: 188px;
-  width: 496px;
+  max-width: 496px;
   margin: 0 auto;
   padding-bottom: 48px;
-}
-
-.btn {
-  padding-bottom: 188px;
 }
 
 .title-btn {
@@ -137,6 +134,9 @@ p {
   background: #4d5ae5;
   margin: 0 auto;
   display: block;
+  border: none;
+  min-width: 169px;
+  height: 56px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   padding: 16px 32px;
@@ -149,19 +149,18 @@ p {
 }
 
 /* Advantages */
+.advantages {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
 
 .advantages-title {
-  clip: rect(0 0 0 0);
-  clip-path: inset(50%);
-  white-space: nowrap;
-  padding-top: 32px;
-  padding-bottom: 32px;
+  visibility: hidden;
 }
 
 .advantages-list {
   display: flex;
   gap: 24px;
-  padding-bottom: 142px;
 }
 
 .advantages-item {
@@ -174,7 +173,7 @@ p {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
-  padding-bottom: 8px;
+  margin-bottom: 8px;
 }
 
 .advantages-text {
@@ -189,6 +188,8 @@ p {
 
 .our-team {
   background: #f4f4fd;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .our-team-title {
@@ -199,24 +200,28 @@ p {
   color: #2e2f42;
   text-align: center;
   text-transform: capitalize;
-  padding-top: 120px;
-  padding-bottom: 72px;
+  margin-bottom: 72px;
 }
 
 .our-team-list {
   display: flex;
   gap: 24px;
-  padding-bottom: 120px;
 }
 
 .our-team-item {
   background: #fff;
+  border-radius: 0 0 4px 4px;
 }
 
 .our-team-img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+
+.our-team-aside {
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 .our-team-subtitle {
   font-weight: 500;
@@ -225,8 +230,8 @@ p {
   letter-spacing: 0.02em;
   color: #2e2f42;
   text-align: center;
-  padding-top: 32px;
-  padding-bottom: 8px;
+  margin-top: 32px;
+  margin-bottom: 8px;
 }
 
 .our-team-text {
@@ -236,10 +241,15 @@ p {
   letter-spacing: 0.02em;
   color: #434455;
   text-align: center;
-  padding-bottom: 32px;
+  margin-bottom: 32px;
 }
 
 /* portfolio */
+
+.portfolio {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
 
 .port-title {
   font-weight: 700;
@@ -249,20 +259,18 @@ p {
   color: #2e2f42;
   text-align: center;
   text-transform: capitalize;
-  padding-top: 98px;
-  padding-bottom: 24px;
+  margin-bottom: 72px;
 }
 
 .port-list {
   display: flex;
   flex-wrap: wrap;
   gap: 24px;
-  padding-bottom: 120px;
+  row-gap: 48px;
 }
 
 .port-item {
   background: #fff;
-  padding-top: 48px;
 }
 
 .port-img {
@@ -271,15 +279,19 @@ p {
   height: auto;
 }
 
+.port-aside {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
+
 .port-subtitle {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
-  padding-left: 16px;
-  padding-top: 32px;
-  padding-bottom: 8px;
+  margin-bottom: 8px;
 }
 
 .port-text {
@@ -288,20 +300,20 @@ p {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-  padding-left: 16px;
-  padding-bottom: 32px;
 }
 
 /* footer */
 
 .footer {
   background: #2e2f42;
-}
-
-.footer-container {
   padding-top: 100px;
   padding-bottom: 100px;
   padding-left: 156px;
+}
+
+.footer-logo {
+  display: inline-block;
+  margin-bottom: 16px;
 }
 .footer-studio {
   color: #f4f4fd;
@@ -313,6 +325,5 @@ p {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
-  width: 264px;
-  padding-top: 16px;
+  max-width: 264px;
 }
