--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,8 @@ p {
 
 .header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 
 .container {
@@ -125,19 +127,19 @@ p {
 /* title */
 
 .title {
-  background: #2e2f42; 
+  background: #2e2f42;
+  max-width: 1440px;
   padding-top: 188px;
   padding-bottom: 188px;
-  background-image:
-    linear-gradient(
-    to bottom,
-    rgba(46, 47, 66, 0.7),
-    rgba(46, 47, 66, 0.7)
+  background-image: linear-gradient(
+      to bottom,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
     ),
     url(../images/office.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: auto;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .title-text {
@@ -167,7 +169,7 @@ p {
   border-radius: 4px;
   padding: 16px 32px;
   cursor: pointer;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .title-btn:hover,
@@ -189,7 +191,7 @@ p {
   margin: -1px;
   border: 0;
   padding: 0;
-  
+
   white-space: nowrap;
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
@@ -206,18 +208,18 @@ p {
 }
 
 .advantages-icon {
+  display: flex;
   border: 1px solid #8e8f99;
   border-radius: 4px;
-  width: 100%;
-  height: 112px;
+  align-items: center;
+  justify-content: center;
   background: #f4f4fd;
+  margin-bottom: 8px;
 }
 
 .icon {
   margin-top: 24px;
   margin-bottom: 24px;
-  margin-left: 100px;
-  margin-right: 100px;
 }
 
 .advantages-subtitle {
@@ -265,6 +267,8 @@ p {
   background: #fff;
   border-radius: 0 0 4px 4px;
   width: ((100%-72)/4);
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .our-team-img {
@@ -275,7 +279,7 @@ p {
 
 .our-team-aside {
   padding-top: 32px;
-  /* padding-bottom: 32px; */
+  padding-bottom: 32px;
 }
 .our-team-subtitle {
   font-weight: 500;
@@ -299,23 +303,37 @@ p {
 .our-team-list-icon {
   display: flex;
   gap: 24px;
-  margin-left: 16px;
   margin-bottom: 32px;
   margin-top: 8px;
+  justify-content: center;
 }
 
 .our-team-item-icon {
   display: block;
   width: 40px;
   height: 40px;
+}
+
+.link-icon {
+  width: 100%;
+  height: 100%;
   background-color: #4d5ae5;
   border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.link-icon:hover,
+.link-icon:focus {
+  background-color: #404bbf;
 }
 
 .our-team-icon {
-  margin-top: 12px;
-  margin-left: 12px;
-  fill: #fff;
+  width: 16px;
+  height: 16px;
+  fill: #f4f4fd;
 }
 
 /* portfolio */
@@ -347,7 +365,7 @@ p {
   background: #fff;
 }
 
-.port-item-mark {
+.port-item-img {
   position: relative;
   overflow: hidden;
 }
@@ -371,9 +389,10 @@ p {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
 .port-item:hover .overlay {
-    transform: translateY(0);
+  transform: translateY(0);
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .port-img {
@@ -415,7 +434,11 @@ p {
 
 .footer-container {
   display: flex;
-  gap: 120px;
+  align-items: baseline;
+}
+
+.footer-logo-text {
+  margin-right: 120px;
 }
 
 .footer-logo {
@@ -440,36 +463,44 @@ p {
   max-width: 208px;
 }
 
-.footer-title {
-font-weight: 500;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #fff;
+.footer-aside {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin-bottom: 16px;
 }
 
 .footer-list-icon {
   display: flex;
   gap: 16px;
-  margin-top: 16px;
 }
 
 .footer-item-icon {
   display: block;
   width: 40px;
   height: 40px;
-  background-color: #4d5ae5;
-  border-radius: 50%;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-item-icon:hover,
-.footer-item-icon:focus {
+
+
+.footer-link {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-link:hover,
+.footer-link:focus {
   background-color: #31d0aa;
 }
 
 .footer-icon {
-  margin-top: 8px;
-  margin-left: 8px;
-  fill: #fff;
+  fill: #f4f4fd;
 }
