--- a/css/styles.css
+++ b/css/styles.css
@@ -213,6 +213,7 @@ p {
   border-radius: 4px;
   align-items: center;
   justify-content: center;
+  height: 112px;
   background: #f4f4fd;
   margin-bottom: 8px;
 }
@@ -363,6 +364,7 @@ p {
 
 .port-item {
   background: #fff;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .port-item-img {
@@ -385,14 +387,15 @@ p {
   padding-top: 40px;
   padding-left: 32px;
   padding-right: 32px;
+  padding-bottom: 40px;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .port-item:hover .overlay {
   transform: translateY(0);
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 
 .port-img {
@@ -481,7 +484,6 @@ p {
   display: block;
   width: 40px;
   height: 40px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -494,6 +496,7 @@ p {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-link:hover,
