--- a/css/styles.css
+++ b/css/styles.css
@@ -131,6 +131,7 @@ p {
   max-width: 1440px;
   padding-top: 188px;
   padding-bottom: 188px;
+  margin: 0 auto;
   background-image: linear-gradient(
       to bottom,
       rgba(46, 47, 66, 0.7),
@@ -218,11 +219,6 @@ p {
   margin-bottom: 8px;
 }
 
-.icon {
-  margin-top: 24px;
-  margin-bottom: 24px;
-}
-
 .advantages-subtitle {
   font-weight: 500;
   font-size: 20px;
@@ -304,7 +300,6 @@ p {
 .our-team-list-icon {
   display: flex;
   gap: 24px;
-  margin-bottom: 32px;
   margin-top: 8px;
   justify-content: center;
 }
@@ -364,15 +359,20 @@ p {
 
 .port-item {
   background: #fff;
-  box-shadow: 0 1px 6px rgba(46, 47, 66, 0.08),
-    0 1px 1px rgba(46, 47, 66, 0.16), 0 2px 1px rgba(46, 47, 66, 0.08);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.port-item:hover {
+box-shadow: 0 1px 6px rgba(46, 47, 66, 0.08),
+    0 1px 1px rgba(46, 47, 66, 0.16), 0 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .port-item-img {
   position: relative;
   overflow: hidden;
 }
+
+
 
 .overlay {
   font-weight: 400;
