--- a/css/styles.css
+++ b/css/styles.css
@@ -566,6 +566,7 @@ p {
 
 .footer-button-icon {
   fill: #fff;
+  margin-left: 16px;
 }
 
 /* modal */
@@ -589,7 +590,6 @@ p {
   visibility: visible;
   pointer-events: auto;
 }
-
 
 
 .modal-close-btn {
@@ -703,6 +703,7 @@ p {
 }
 
 .modal-box-comment {
+  width: 360px;
   margin-bottom: 16px;
 }
 
@@ -747,13 +748,13 @@ p {
 }
 
 .box-check-icon {
+  display: inline-flex;
   width: 16px;
   height: 16px;
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  display: inline-flex;
   align-items: center;
   justify-content: center;
   fill: transparent;
