--- a/css/styles.css
+++ b/css/styles.css
@@ -504,8 +504,6 @@ p {
 }
 
 .footer-subscribe {
-  width: 453px;
-  height: 80px;
   margin-left: 80px;
 }
 
@@ -544,7 +542,6 @@ p {
 
 .footer-button {
   display: flex;
-  margin-left: 16px;
   border-radius: 4px;
   padding: 8px 24px;
   min-width: 165px;
@@ -560,6 +557,13 @@ p {
   align-items: center;
   cursor: pointer;
   border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-button:hover,
+.footer-button:focus {
+  background: #404bbf;
+  cursor: pointer;
 }
 
 .footer-button-icon {
@@ -648,11 +652,11 @@ p {
 }
 
 .modal-form {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
+  /* display: flex; */
+  /* align-items: flex-start; */
+  /* justify-content: flex-start; */
   flex-direction: column;
-  gap: 8px;
+  /* gap: 8px; */
 }
 
 .modal-box {
@@ -697,6 +701,7 @@ p {
   position: absolute;
   left: 16px;
   top: 50%;
+  fill: #2e2f42;
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -707,11 +712,6 @@ p {
 }
 
 .modal-comment {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.04em;
-  color: rgba(46, 47, 66, 0.4);
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   width: 100%;
@@ -721,6 +721,14 @@ p {
   background-color: transparent;
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-comment::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
 }
 
 .modal-comment:focus {
@@ -737,8 +745,6 @@ p {
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
-  align-items: center;
-  gap: 8px;
 }
 
 .check-link {
@@ -756,6 +762,7 @@ p {
   align-items: center;
   justify-content: center;
   fill: transparent;
+  margin-right: 8px;
 }
 
 .modal-check:checked + .check-text .box-check-icon {
@@ -779,8 +786,14 @@ p {
   height: 56px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background-color: #4d5ae5;
-  margin: 24px auto;
+  margin: 0 auto;
   cursor: pointer;
   border: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-button:hover,
+.form-button:focus {
+  background: #404bbf;
+  cursor: pointer;
 }
