--- a/css/styles.css
+++ b/css/styles.css
@@ -30,15 +30,30 @@ p {
 }
 
 .container {
-  width: 1158px;
-  padding: 0 15px;
+  max-width: 320px;
+  padding: 0 16px;
   margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .container {
+    max-width: 1158px;
+    padding: 0 15px;
+  }
 }
 
 .header-container {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
+
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -48,7 +63,10 @@ p {
   text-transform: uppercase;
   color: #4d5ae5;
   text-decoration: none;
-  margin-right: 76px;
+}
+
+.header-logo {
+  padding: 17px 0;
 }
 
 .studio {
@@ -61,66 +79,205 @@ p {
 }
 
 .nav-list {
-  display: flex;
-  gap: 40px;
-}
-
-.nav-item {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-  text-decoration: none;
-  padding: 24px 0;
-  display: block;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.current {
-  position: relative;
-  color: #404bbf;
-}
-
-.current::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-  background-color: #404bbf;
-  border-radius: 2px;
-  height: 4px;
-  width: 100%;
-}
-
-.nav-item:hover,
-.nav-item:focus {
-  color: #404bbf;
+  display: none;
 }
 
 .address {
   list-style-type: none;
   font-style: normal;
   margin-left: auto;
+  display: none;
 }
 
-.addr-list {
-  display: flex;
-  gap: 40px;
-}
-.addr-list a {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #434455;
-  text-decoration: none;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.open-menu-btn {
+  padding: 0;
+  line-height: 0;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
 }
 
-.addr-list a:hover,
-.addr-list a:focus {
-  color: #404bbf;
+@media screen and (min-width: 768px) {
+  .open-menu-btn {
+    display: none;
+  }
+  .logo {
+    margin-right: 120px;
+  }
+  .nav-list {
+    display: flex;
+    gap: 40px;
+  }
+  .nav-item {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    text-decoration: none;
+    padding: 24px 0;
+    display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .nav-item:hover,
+  .nav-item:focus {
+    color: #404bbf;
+  }
+  .current {
+    position: relative;
+    color: #404bbf;
+  }
+  .current::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    background-color: #404bbf;
+    border-radius: 2px;
+    height: 4px;
+    width: 100%;
+  }
+  .address {
+    display: block;
+  }
+  .addr-list {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+  }
+  .addr-item {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.02em;
+    color: #434455;
+    text-decoration: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .addr-item:hover,
+  .addr-item:focus {
+    color: #404bbf;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .logo {
+    margin-right: 76px;
+  }
+  .addr-list {
+    flex-direction: row;
+    gap: 40px;
+  }
+  .addr-item {
+    font-size: 16px;
+    line-height: 1.5;
+  }
+}
+
+/* menu */
+
+@media screen and (max-width: 767px) {
+  .menu {
+    width: 320px;
+    min-height: 640px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    padding: 72px 16px 16px;
+    background-color: #fcfcfc;
+    border-radius: 4px;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
+      0 2px 1px 0 rgba(0, 0, 0, 0.2);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .menu-list {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    margin-bottom: 168px;
+  }
+  .menu-item {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.1;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    text-decoration: none;
+    /* padding: 24px 0; */
+    display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .menu-item:hover,
+  .menu-item:focus {
+    color: #404bbf;
+  }
+  .menu-current {
+    position: relative;
+    color: #404bbf;
+  }
+  .menu-address {
+    display: block;
+    margin-bottom: 48px;
+  }
+  .menu-addr-list {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+  }
+  .menu-addr-item {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #434455;
+    text-decoration: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .menu-addr-item:hover,
+  .menu-addr-item:focus {
+    color: #404bbf;
+  }
+
+  .menu-addr-current {
+    color: #4d5ae5;
+  }
+
+  .menu-list-icon {
+    display: flex;
+    gap: 40px;
+  }
+
+  .menu-item-icon {
+    display: block;
+    width: 40px;
+    height: 40px;
+  }
+
+  .menu-link-icon {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .menu-link-icon:hover,
+  .menu-link-icon:focus {
+    background-color: #404bbf;
+  }
+
+  .menu-icon {
+    width: 16px;
+    height: 16px;
+    fill: #f4f4fd;
+  }
 }
 
 /* main */
@@ -128,29 +285,42 @@ p {
 
 .title {
   background: #2e2f42;
-  padding-top: 188px;
-  padding-bottom: 188px;
+  padding-top: 72px;
+  padding-bottom: 72px;
   margin: 0 auto;
   background-image: linear-gradient(
       to bottom,
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/office.jpg);
+    url(../images/mobile/office-m1x.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
+@media screen and (min-resolution: 2dppx),
+  (min-resolution: 192dpi),
+  (-webkit-min-device-pixel-ratio: 2) {
+  .title {
+    background-image: linear-gradient(
+        to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/mobile/office-m2x.jpg);
+  }
+}
+
 .title-text {
   font-weight: 700;
-  font-size: 56px;
+  font-size: 36px;
   line-height: 1.07;
   letter-spacing: 0.02em;
   color: #fff;
-  max-width: 496px;
+  max-width: 216px;
   margin: 0 auto;
-  margin-bottom: 48px;
+  margin-bottom: 68px;
 }
 
 .title-btn {
@@ -178,10 +348,70 @@ p {
   cursor: pointer;
 }
 
+@media screen and (min-width: 768px) {
+  .title {
+    padding-top: 112px;
+    padding-bottom: 112px;
+    background-image: linear-gradient(
+        to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/tablet/office-t1x.jpg);
+  }
+  @media screen and (min-resolution: 2dppx),
+    (min-resolution: 192dpi),
+    (-webkit-min-device-pixel-ratio: 2) {
+    .title {
+      background-image: linear-gradient(
+          to bottom,
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/tablet/office-t2x.jpg);
+    }
+  }
+  .title-text {
+    font-size: 56px;
+    line-height: 1.11;
+    max-width: 496px;
+    margin-bottom: 36px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .title {
+    padding-top: 188px;
+    padding-bottom: 188px;
+    background-image: linear-gradient(
+        to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/desktop/office.jpg);
+  }
+  @media screen and (min-resolution: 2dppx),
+    (min-resolution: 192dpi),
+    (-webkit-min-device-pixel-ratio: 2) {
+    .title {
+      background-image: linear-gradient(
+          to bottom,
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/desktop/office-d2x.jpg);
+    }
+  }
+  .title-text {
+    max-width: 496px;
+    margin-bottom: 48px;
+  }
+}
+
 /* Advantages */
 .advantages {
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 
 .visually-hidden {
@@ -200,47 +430,95 @@ p {
 
 .advantages-list {
   display: flex;
-  gap: 24px;
-}
-
-.advantages-item {
-  width: ((100%-72px)/4);
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  gap: 72px;
 }
 
 .advantages-icon {
-  display: flex;
-  border: 1px solid #8e8f99;
-  border-radius: 4px;
-  align-items: center;
-  justify-content: center;
-  height: 112px;
-  background: #f4f4fd;
-  margin-bottom: 8px;
+  display: none;
 }
-
 .advantages-subtitle {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   color: #2e2f42;
   margin-bottom: 8px;
+  text-align: center;
 }
 
 .advantages-text {
-  font-weight: 400;
+  font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
 }
 
+@media screen and (min-width: 768px) {
+  .advantages-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 72px 24px;
+  }
+
+  .advantages-item {
+    width: 356px;
+    height: 120px;
+  }
+
+  .advantages-subtitle {
+    text-align: start;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .advantages {
+    padding-top: 120px;
+  }
+
+  .advantages-list {
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 24px;
+    padding-bottom: 120px;
+  }
+
+  .advantages-item {
+    width: ((100%-72px)/4);
+  }
+
+  .advantages-icon {
+    display: flex;
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background: #f4f4fd;
+    margin-bottom: 8px;
+  }
+
+  .advantages-subtitle {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+  }
+
+  .advantages-text {
+    font-weight: 400;
+  }
+}
+
 /* our-team */
 
 .our-team {
   background: #f4f4fd;
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 
 .our-team-title {
@@ -256,7 +534,10 @@ p {
 
 .our-team-list {
   display: flex;
-  gap: 24px;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: column;
+  gap: 72px;
 }
 
 .our-team-item {
@@ -331,11 +612,30 @@ p {
   fill: #f4f4fd;
 }
 
+@media screen and (min-width: 768px) {
+  .our-team-list {
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .our-team {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+
+  .our-team-list {
+    gap: 24px;
+  }
+}
+
 /* portfolio */
 
 .portfolio {
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 
 .port-title {
@@ -351,12 +651,15 @@ p {
 
 .port-list {
   display: flex;
-  flex-wrap: wrap;
-  gap: 24px;
-  row-gap: 48px;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: column;
+  gap: 48px;
 }
 
 .port-item {
+  width: 288px;
+  height: 400px;
   background: #fff;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -424,27 +727,70 @@ p {
   color: #434455;
 }
 
+@media screen and (min-width: 768px) {
+  .port-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 24px;
+    row-gap: 72px;
+  }
+
+  .port-item {
+    width: 356px;
+    height: 420px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .portfolio {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+
+  .port-list {
+    row-gap: 48px;
+  }
+
+  .port-item {
+    width: 360px;
+  }
+}
+
 /* footer */
 
 .footer {
   background: #2e2f42;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 
 .footer-container {
   display: flex;
-  align-items: baseline;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+}
+
+.footer-logo-media {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .footer-logo-text {
-  margin-right: 120px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .footer-logo {
   display: inline-block;
   margin-bottom: 16px;
   margin-right: 0;
+  padding: 0;
 }
 .footer-studio {
   color: #f4f4fd;
@@ -461,6 +807,11 @@ p {
 
 .footer-media {
   max-width: 208px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 72px;
 }
 
 .footer-aside {
@@ -504,7 +855,11 @@ p {
 }
 
 .footer-subscribe {
-  margin-left: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 72px;
 }
 
 .footer-subs-text {
@@ -518,7 +873,9 @@ p {
 
 .form {
   display: flex;
-  gap: 24px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .email {
@@ -543,7 +900,7 @@ p {
 .footer-button {
   display: flex;
   border-radius: 4px;
-  padding: 8px 24px;
+  /* padding: 8px 24px; */
   min-width: 165px;
   height: 40px;
   background: #4d5ae5;
@@ -558,6 +915,7 @@ p {
   cursor: pointer;
   border: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin-top: 16px;
 }
 
 .footer-button:hover,
@@ -571,10 +929,81 @@ p {
   margin-left: 16px;
 }
 
+@media screen and (min-width: 768px) {
+  .footer-container {
+  }
+
+  .footer-logo-media {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: center;
+    align-items: baseline;
+    margin-right: 168px;
+    margin-left: 108px;
+  }
+
+  .footer-logo-text {
+    align-items: flex-start;
+    padding-right: 24px;
+    margin: 0;
+  }
+
+  .footer-media {
+    margin: 0;
+  }
+
+  .footer-subscribe {
+    align-items: flex-start;
+    margin-right: 207px;
+    margin-left: 108px;
+  }
+
+  .form {
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+    align-items: baseline;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .footer {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+
+  .footer-container {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+  }
+
+  .footer-logo-media {
+    margin: 0;
+  }
+
+  .footer-logo-text {
+    margin-right: 120px;
+    padding-right: 0;
+  }
+
+  .footer-media {
+    margin-right: 80px;
+  }
+
+  .footer-subscribe {
+    margin-right: 0;
+    margin-left: 0;
+    margin-top: 0;
+  }
+}
+
 /* modal */
 
 .backdrop {
   position: fixed;
+  z-index: 5;
   top: 0;
   left: 0;
   width: 100%;
@@ -598,9 +1027,9 @@ p {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  width: 408px;
-  min-height: 584px;
-  padding: 72px 24px 24px;
+  width: 288px;
+  min-height: 623px;
+  padding: 72px 16px 16px;
   background-color: #fcfcfc;
   border-radius: 4px;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
@@ -641,8 +1070,6 @@ p {
   fill: #ffffff;
 }
 
-
-
 .modal-title {
   font: 500 16px / 1.5 "Roboto", sans-serif;
   letter-spacing: 0.02em;
@@ -675,14 +1102,14 @@ p {
 
 .modal-wrap {
   position: relative;
-  width: 360px;
+  width: 256px;
 }
 
 .modal-input {
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   background-color: transparent;
-  width: 360px;
+  width: 256px;
   height: 40px;
   padding-left: 38px;
   outline: transparent;
@@ -707,7 +1134,7 @@ p {
 }
 
 .modal-box-comment {
-  width: 360px;
+  width: 256px;
   margin-bottom: 16px;
 }
 
@@ -758,7 +1185,8 @@ p {
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   align-items: center;
   justify-content: center;
   fill: transparent;
@@ -796,4 +1224,24 @@ p {
 .form-button:focus {
   background: #404bbf;
   cursor: pointer;
+}
+
+@media screen and (min-width: 768px) {
+  .modal {
+    width: 408px;
+    min-height: 584px;
+    padding: 72px 24px 24px;
+  }
+
+  .modal-wrap {
+    width: 360px;
+  }
+
+  .modal-input {
+    width: 360px;
+  }
+
+  .modal-box-comment {
+    width: 360px;
+  }
 }
