--- a/css/styles.css
+++ b/css/styles.css
@@ -277,6 +277,13 @@ p {
   }
 }
 
+@media screen and (min-width : 768px) {
+  .menu-backdrop {
+    display: none;
+  }
+  
+}
+
 /* main */
 /* title */
 
@@ -878,6 +885,10 @@ p {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.label-email {
+  margin-bottom: 16px;
 }
 
 .email {
